--- a/note/pubspec.yaml
+++ b/note/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-dev_dependencies:
-  flutter_test:
+dependencies:
+  flutter:
     sdk: flutter
-
+  http: ^1.1.0
+  shared_preferences: ^2.2.2
+  intl: ^0.18.1  # для форматирования дат 
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
